# substrate-airgapped

./: .rustfmt.toml  Cargo.toml  README.md
airsub-cli/: Cargo.toml
airsub-cli/src/: main.rs
airsub-create/: Cargo.toml
airsub-decode/: Cargo.toml
airsub-decode/src/: lib.rs
airsub-sign/: Cargo.toml
airsub-types/: Cargo.toml
airsub-types/src/: lib.rs
cli/src/: main.rs
metadata/: Cargo.toml
metadata/examples/: call_index_from_metadata.rs
metadata/src/: lib.rs
substrate-airgapped/: Cargo.toml
substrate-airgapped-cli/: Cargo.toml
substrate-airgapped-create/: Cargo.toml
substrate-airgapped-sign/: Cargo.toml
substrate-airgapped-types/: Cargo.toml
substrate-airgapped-types/examples/: decode_ext.rs
substrate-airgapped-types/examples/submit/: main.rs  rpc_calls.md
substrate-airgapped-types/examples/test/: genesis.json  main.rs  metadata.json
substrate-airgapped-types/src/: call.rs  era.rs  extra.rs  extrinsic_builder.rs  hashing.rs  lib.rs  metadata.rs  runtime.rs  signed_payload.rs  unchecked_extrinsic.rs
substrate-airgapped-types/src/extrinsic/: extra.rs  mod.rs
substrate-airgapped-types/src/frame/: balances.rs  mod.rs  system.rs
substrate-airgapped/examples/: call_index_from_metadata.rs  signed_tx_from_pair.rs
substrate-airgapped/examples/no_meta_transfer/: genesis.json  main.rs  metadata.json  rpc_calls.md  version.json
substrate-airgapped/examples/signed_tx_from_pair/: main.rs  rpc_calls.md
substrate-airgapped/src/: error.rs  lib.rs  metadata.rs  runtimes.rs  util.rs
substrate-airgapped/src/extrinsic/: mod.rs
substrate-airgapped/src/frame/: balances.rs  mod.rs  system.rs
substrate-airgapped/src/transaction/: extra.rs  generic_call.rs  mod.rs  tx.rs
substrate-airgapped/src/tx/: generic_call.rs  mod.rs  mortality.rs
util/: Cargo.toml
util/src/: lib.rs
