[package]
name = "airsub-decode"
version = "0.1.0"
authors = ["emostov <32168567+emostov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { version = "1.3.4", default-features = false }
# Primitive types for runtime modules, useful for type definitions
sp-runtime = { version = "2.0.0", package = "sp-runtime" }