[package]
name = "substrate-airgapped"
version = "0.1.0"
authors = ["emostov <32168567+emostov@users.noreply.github.com>"]
edition = "2018"

[dependencies]
# Parity (non-substrate)
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }

# Substrate (hopefully these can be removed in the future)
sp-runtime = { version = "2.0.1", default-features = false }
sp-core = { version = "2.0.1", default-features = false }
primitive-types = { version = "0.7", default-features = false, features = ["rustc-hex", "serde"] }
anyhow = "1"

[dev-dependencies]
# Currently these are just to get the example going
sp-keyring = { version = "2.0.1", package = "sp-keyring", default-features = false }
sp-version = { version = "2.0.1", package = "sp-version" }
hex = { version = "0.4.2" }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
reqwest = { version = "0.11", features = ["json", "blocking"] }
metadata = { version = "0.1.0", package = "substrate-airgapped-metadata", path = "../metadata" }
